# Detection

./: CMakeLists.txt  README.md
include/: Log.h  algorithm.hpp  gloalDet.hpp  golfAbstract.hpp  golfAlgorFrameVersion.hpp  golfDetection.hpp  localBallDet.hpp  localClubDet.hpp  nanoDetMNN.hpp  nanoDetNCNN.hpp
src/: Log.cpp  algorithm.cpp  gloalDet.cpp  golfAlgorFrameVersion.cpp  golfDetection.cpp  localBallDet.cpp  localClubDet.cpp  nanoDetMNN.cpp  nanoDetNCNN.cpp
